[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "api-key-rotator-lang1234"
version = "0.1.1"
description = "A Python library for rotating API keys with automatic expiration handling"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "xLang1234"}
]
keywords = ["api", "key", "rotation", "rate-limit", "api-key", "key-management", "thread-safe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/xLang1234/api-key-rotator"
Documentation = "https://github.com/xLang1234/api-key-rotator#readme"
Repository = "https://github.com/xLang1234/api-key-rotator"
"Bug Tracker" = "https://github.com/xLang1234/api-key-rotator/issues"

[tool.setuptools]
packages = ["api_key_rotator"]

[tool.setuptools.package-data]
api_key_rotator = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=api_key_rotator --cov-report=term-missing"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
